--- a/src/components/Data/Connect/styles.module.css
+++ b/src/components/Data/Connect/styles.module.css
@@ -267,3 +267,66 @@
     padding: 0 0.2em;
     cursor: pointer;
 }
+
+.progressBlock {
+    background: #fff;
+    width: 6.5em;
+    display: flex;
+    flex: none;
+    flex-direction: column;
+    border-radius: 5px;
+    box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.3)
+}
+
+.progressTitle {
+    display: flex;
+    flex: none;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    background-color: #455267;
+    justify-content: center;
+    padding: 0.1em 0;
+}
+
+.progressTitle span {
+    color: #fff;
+    font-size: 1.125rem;
+    line-height: 1.2;
+}
+
+.progressContent {
+    display: flex;
+    flex: none;
+    flex-direction: column;
+    margin: 0.45em 0;
+    padding: 0 0.55em;
+}
+
+.progressLoad {
+    display: flex;
+    flex: none;
+    justify-content: center;
+}
+
+.progressLoad img {
+    height: 1.3em;
+}
+
+.progressing{
+    display: flex;
+    flex: none;
+    margin-top: 0.2em;
+}
+
+.progressText{
+    display: flex;
+    flex: none;
+    margin: 0.2em 0;
+}
+
+.progressText span {
+    color: #4a4a4a;
+    font-family: Arial;
+    line-height: 1.1;
+    font-size: 0.875rem;
+}
