--- a/src/components/Home/styles.module.css
+++ b/src/components/Home/styles.module.css
@@ -94,10 +94,11 @@
 }
 
 .partner {
-    display: flex;
-    flex: auto;
     font-size: 1.125rem;
-    display: none;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: 50%;
+    overflow: hidden;
 }
 
 .time {
