--- a/src/components/Data/Schema/styles.module.css
+++ b/src/components/Data/Schema/styles.module.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     flex: auto;
     padding: 0 10%;
+    position: relative;
 }
 
 .schemaInfo {
@@ -188,4 +189,17 @@
 
 .disabled {
     cursor: not-allowed;
+}
+
+.load {
+    display: flex;
+    position: absolute;
+    top: -0.25em;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.65);
+    z-index: 2;
+    justify-content: center;
+    align-items: center;
 }
