--- a/src/components/Home/styles.module.css
+++ b/src/components/Home/styles.module.css
@@ -91,21 +91,27 @@
     align-items: center;
     color: #636363;
     background-color: #f0f2f6;
+    justify-content: space-between;
 }
 
 .partner {
     font-size: 1.125rem;
     white-space: nowrap;
     text-overflow: ellipsis;
-    max-width: 50%;
+    max-width: 47%;
     overflow: hidden;
+    line-height: 1.4;
 }
 
 .time {
-    display: flex;
+    display: block; 
     flex: auto;
-    justify-content: flex-end;
-    font-size: 0.75rem;
+    font-size: .75rem;
+    text-overflow: ellipsis;
+    max-width: 50%;
+    overflow: hidden;
+    white-space: nowrap;
+    line-height: 1.4;
 }
 
 .cover {
