--- a/src/components/Data/Quality/styles.module.css
+++ b/src/components/Data/Quality/styles.module.css
@@ -356,63 +356,10 @@
     background-color: #fed900;
 }
 
-.fixes {
-    display: flex;
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    z-index: 2;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-    font-family: Arial;
-}
-
-.cover {
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.65);
-    height: 100%;
-    width: 100%;
-    z-index: -1;
-}
-
-.fixesBlock {
-    background: #fff;
-    display: flex;
-    flex-direction: column;
-    width: 12em;
-    flex: none;
-    border-radius: 4px;
-    box-shadow: 0 12px 20px 0 rgba(0, 0, 0, 0.3);
-    position: relative;
-}
-
-.fixesTitle {
-    display: flex;
-    justify-content: center;
-    flex: 0 0;
-    background-color: #445167;
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
-    padding: 0.1em 0;
-}
-
-.fixesTitle span {
-    font-size: 1.125rem;
-    color: #fff;
-}
-
 .fixesBottom {
     display: flex;
     justify-content: center;
-    margin-bottom: 0.2em;
+    margin-top: 0.2em;
     flex: none;
 }
 
@@ -439,16 +386,12 @@
 
 .cancel {
     background: #fff;
-}
-
-.cancel {
     color: #4a4a4a;
 }
 
 .fixesContent {
     display: flex;
     flex: none;
-    margin: 0.2em 0.5em;
     flex-direction: column;
 }
 
@@ -509,14 +452,6 @@
     flex: none;
 }
 
-.fixesBottom .disabled {
-    cursor: not-allowed;
-    background-color: #d3d3d3;
-    color: #aaaaaa;
-    background-image: none;
-    border-color: #d3d3d3;
-}
-
 .fixesArea {
     display: flex;
     flex: none;
@@ -574,7 +509,7 @@
     color: #636166;
     text-overflow: ellipsis;
     overflow: hidden;
-    max-width: 80%;
+    max-width: 75%;
     white-space: nowrap;
 }
 
