fix model insights

--- a/src/components/Modeling/Result/styles.module.css
+++ b/src/components/Modeling/Result/styles.module.css
@@ -400,6 +400,7 @@
     font-family: SanFranciscoText;
     line-height: 1.2;
     color: #1d2b3c;
+    margin-right: 1em;
 }
 
 .modelInsightsTable {
