--- a/src/components/Modeling/Result/styles.module.css
+++ b/src/components/Modeling/Result/styles.module.css
@@ -512,6 +512,10 @@
     align-items: center;
 }
 
+.modelInsightsChart svg {
+    overflow: inherit
+}
+
 .rect {
     fill: #b0d9f4;
 }
@@ -520,9 +524,10 @@
     fill: rgb(68, 142, 237);
 }
 
-.line {
+.d3line {
     stroke: rgb(68, 142, 237);
     stroke-width: 1.5px;
+    fill: transparent;
 }
 
 .modelInsightsLoading {
