--- a/src/components/Data/Connect/styles.module.css
+++ b/src/components/Data/Connect/styles.module.css
@@ -335,23 +335,16 @@
     display: flex;
     flex: none;
     justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    
 }
 
-.progressButton button {
-    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
-    background-image: linear-gradient(to bottom, #5b657b, #243448);
-    color: #fff;
-    border: 0;
-    border-radius: 5px;
-    display: flex;
-    flex: none;
-    justify-content: center;
+.progressButton span {
+    line-height: 1.1;
+    font-size: 0.875rem;
+    color: #63addc;
     cursor: pointer;
-    padding: 0.1em 0.2em;
-}
-
-.progressButton button span{
-    font-size: 1rem;
 }
 
 .disabled {
