--- a/src/components/Data/Quality/styles.module.css
+++ b/src/components/Data/Quality/styles.module.css
@@ -376,6 +376,15 @@
     border-radius: 5px;
 }
 
+.fixesBottom .disabled {
+    cursor: not-allowed;
+    background-color: #d3d3d3;
+    color: #aaaaaa;
+    background-image: none;
+    border: transparent;
+    cursor: not-allowed;
+}
+
 .save {
     background-image: linear-gradient(to bottom, #5b657b, #243448);
 }
