--- a/src/components/Modeling/Result/styles.module.css
+++ b/src/components/Modeling/Result/styles.module.css
@@ -7,7 +7,7 @@
 
 .modelResult span {
     font-size: 1.125rem;
-    display: flex;  
+    display: flex;
     font-family: SanFranciscoText;
     line-height: normal;
     align-items: baseline;
@@ -81,6 +81,7 @@
     justify-content: center;
     cursor: pointer;
     padding: 0.1em 0.25em;
+    margin-right: .25em;
 }
 
 .button span {
@@ -139,7 +140,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-left: 0.2em; 
+    margin-left: 0.2em;
     margin-top: 0.2em;
     justify-content: center;
 }
