--- a/src/components/Modeling/Start/styles.module.css
+++ b/src/components/Modeling/Start/styles.module.css
@@ -143,7 +143,7 @@
 }
 
 .tab.active {
-    border-bottom-color: #1d2b3c; 
+    border-bottom-color: #1d2b3c;
 }
 
 .tab span {
@@ -171,7 +171,7 @@
     left: 0;
     top: 0;
     right: 0;
-    bottom: 0;
+    bottom: 0.25em;
     justify-content: center;
     align-items: center;
     background-color: rgba(0,0,0,0.3);
@@ -664,7 +664,7 @@ span.advancedDesc {
     height: 0.3em;
     width: 0.3em;
     border-radius: 0.3em;
-    margin-right: -0.15em; 
+    margin-right: -0.15em;
     background-image: radial-gradient(circle at 50% 0, #ffffff, #cdcdcd);
     border: solid 1px #9b9b9b;
     display: flex;
