fix advanced modeling

--- a/src/components/Modeling/Start/styles.module.css
+++ b/src/components/Modeling/Start/styles.module.css
@@ -527,6 +527,8 @@
 .advancedTitle {
     display: flex;
     flex: none;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .advancedTitle span{
@@ -557,6 +559,8 @@
     font-size: 1rem;
     color: #000000;
     line-height: 1.2;
+    max-width: 6em;
+    text-align: center;
 }
 
 .advancedOption input[type='text']{
@@ -573,7 +577,6 @@
 .advancedBlock {
     display: flex;
     flex: none;
-    align-items: center;
     margin: 0.15em 0;
 }
 
@@ -589,6 +592,7 @@
     font-size: 1rem;
     color: #000000;
     line-height: 1.2;
+    cursor: pointer;
 }
 
 .limit {
@@ -607,8 +611,8 @@ span.advancedDesc {
     font-size: 1rem;
     color: #000000;
     line-height: 1.2;
-    padding: 5px 10px;
-    width: 25%;
+    padding: 5px 4px;
+    width: 35%;
     text-align: center;
 }
 
@@ -659,26 +663,10 @@ span.advancedDesc {
     border-right: 1px solid #000
 }
 
-.advancedDrag {
+.range {
     position: absolute;
-    height: 0.3em;
-    width: 0.3em;
-    border-radius: 0.3em;
-    margin-right: -0.15em;
-    background-image: radial-gradient(circle at 50% 0, #ffffff, #cdcdcd);
-    border: solid 1px #9b9b9b;
     display: flex;
     flex: none;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-}
-
-.advancedDragMini {
-    background-image: radial-gradient(circle at 50% 0, #a3a0a0, #cdcdcd);
-    width: 0.15em;
-    height: 0.15em;
-    border-radius: 0.15em;
 }
 
 .advancedPercentBox {
@@ -735,15 +723,19 @@ span.advancedDesc {
 }
 
 .inputLarge {
-    width: 50%;
+    width: 100%;
 }
 
 .advancedResampling {
     display: flex;
-    flex: auto;
+    flex: none;
+    width: 35%;
     flex-direction: column;
-    margin: 0.2em 0;
-    justify-content: space-between;
+    margin: 0.21em 0;
+}
+
+.advancedResampling .advancedOptionBox {
+    margin-top: 0.2em;
 }
 
 .plot {
@@ -780,4 +772,17 @@ span.advancedDesc {
     font-size: 1.125rem;
     line-height: 1.1;
     font-family: Arial;
+}
+
+.advancedOther {
+    display: flex;
+    flex: none;
+    flex-direction: column;
+    width: 65%;
+}
+
+.otherLabel {
+    width: 2em;
+    flex-direction: column;
+    flex: none;
 }
