add thumnbnails in regression advanced view

--- a/src/components/Modeling/AdvancedView/AdvancedView.module.less
+++ b/src/components/Modeling/AdvancedView/AdvancedView.module.less
@@ -1,6 +1,6 @@
 .advancedModelResult {
     font-size: 1rem;
-    padding: 0 10%;
+    padding: 0 2%;
     .modelResult {
         display: inline-block;
         .status {
@@ -9,7 +9,7 @@
         }
     }
     .modelComp {
-        margin-left: 10em;
+        margin-left: 10%;
         cursor: pointer;
         display: inline-block;
     }
