--- a/src/components/Modeling/AdvancedView/AdvancedView.module.less
+++ b/src/components/Modeling/AdvancedView/AdvancedView.module.less
@@ -63,6 +63,13 @@
     display: flex;
     .rightPanel {
         flex: 1;
+        .plot {
+            img {
+                width: 400px;
+                height: 300px;
+            }
+            padding: 1em;
+        }
     }
     .leftPanel {
         min-width: 300px;
