--- a/src/components/Problem/styles.module.css
+++ b/src/components/Problem/styles.module.css
@@ -5,24 +5,16 @@
     padding: 0 10%;
     font-family: HelveticaNeue;
     color: #4a4a4a;
+    flex-direction: column;
 }
 
 .title {
-    margin: 0.25em 0;
+    margin: 0.45em 0 0.25em;
     display: flex;
 }
 
 .title span {
     font-size: 1.25rem;
-}
-
-.textBox {
-    display: flex;
-    flex-direction: column;
-}
-
-.textarea {
-    resize: none;
 }
 
 .text {
@@ -37,6 +29,8 @@
 
 .radioBox {
     display: flex;
+    flex: none;
+    flex-direction: column;
 }
 
 .radio {
