--- a/src/components/Project/styles.module.css
+++ b/src/components/Project/styles.module.css
@@ -24,3 +24,20 @@
     flex-direction: column;
     margin-top: 0.4em;
 }
+
+.textBox {
+    display: flex;
+    flex-direction: column;
+    margin-top: 0.15em
+}
+
+.textarea {
+    resize: none;
+}
+
+.sep {
+    display: flex;
+    flex: none;
+    margin: 0.4em 0;
+    border-top: 1px dashed #adafb9
+}
