--- a/src/components/Modeling/Result/styles.module.css
+++ b/src/components/Modeling/Result/styles.module.css
@@ -174,6 +174,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    max-width: 80%;
+    min-width: 20%;
 }
 
 .progress span {
