--- a/src/components/Data/Connect/styles.module.css
+++ b/src/components/Data/Connect/styles.module.css
@@ -281,6 +281,7 @@
 .progressTitle {
     display: flex;
     flex: none;
+    position: relative;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
     background-color: #455267;
