--- a/src/components/Modeling/Start/styles.module.css
+++ b/src/components/Modeling/Start/styles.module.css
@@ -622,6 +622,15 @@ span.advancedDesc {
   text-align: center;
 }
 
+.antdAdvancedSize {
+  font-family: SanFranciscoText;
+  font-size: 1rem;
+  color: #000000;
+  line-height: 1.2;
+  text-align: center;
+  width: 100%;
+}
+
 .advancedBox {
   display: flex;
   flex: auto;
