--- a/src/components/Modeling/AdvancedView/AdvancedView.module.less
+++ b/src/components/Modeling/AdvancedView/AdvancedView.module.less
@@ -59,6 +59,20 @@
     }
 }
 
+.button {
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
+    background-image: linear-gradient(to bottom, #5b657b, #243448);
+    color: #fff;
+    border: 0;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+    padding: 1em;
+    margin-left: 0.5em;
+    margin-bottom: 0.5em;
+}
+
 .detailCurves {
     display: flex;
     .rightPanel {
