--- a/src/components/Modeling/Start/styles.module.css
+++ b/src/components/Modeling/Start/styles.module.css
@@ -229,10 +229,10 @@
   font-size: 1.125rem;
 }
 
-.targetHistogram {
+/* .targetHistogram {
   flex: 2 1;
   cursor: pointer;
-}
+} */
 
 .targetHistogram img {
   margin-right: 0.05em;
@@ -383,22 +383,22 @@
   overflow: hidden;
 }
 
-.tableChart {
+/* .tableChart {
   flex: 2 1;
   cursor: pointer;
   border-bottom-color: transparent;
-}
+} */
 
-.tableChart img {
-  margin-right: 0.05em;
+.tableImage {
   width: 0.4em;
   height: 0.3em;
+  cursor: pointer;
 }
 
-.tableChart span {
+/* .tableChart span {
   text-decoration-line: underline;
   color: #448eed;
-}
+} */
 
 .tableLarge {
   flex: 2 1;
