--- a/src/components/Modeling/Start/styles.module.css
+++ b/src/components/Modeling/Start/styles.module.css
@@ -975,6 +975,23 @@ span.advancedDesc {
   margin-top: 0.05em;
 }
 
+.newVariableEmpty {
+  display: flex;
+  flex: none;
+  position: absolute;
+  right: 0;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  margin-right: 0.05em;
+  cursor: pointer;
+}
+
+.newVariableEmpty span {
+  font-size: 0.75rem
+}
+
 .hasList {
   left: 100%;
 }
