--- a/src/components/Modeling/Result/styles.module.css
+++ b/src/components/Modeling/Result/styles.module.css
@@ -62,6 +62,8 @@
 
 .selectBlock {
     display: flex;
+    flex: none;
+    margin-bottom: 0.2em;
 }
 
 .buttonBlock {
@@ -107,7 +109,10 @@
 
 .radioGroup {
     display: flex;
+    flex: none;
     flex-direction: column;
+    position: relative;
+    padding-right: 0.15em;
 }
 
 .radio {
@@ -128,6 +133,15 @@
     height: 0.16em;
     margin-right: 0.1em;
     cursor: pointer;
+}
+
+.radio input:disabled + label {
+    color: #ccc;
+    cursor: not-allowed;
+}
+
+.radio input:disabled {
+    cursor: not-allowed;
 }
 
 .performanceBox {
@@ -641,4 +655,176 @@
     font-weight: bold;
     color: #1d2b3c;
     font-family: SanFranciscoText;
+}
+
+.costBlock {
+    display: flex;
+    flex: none;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
+    left: 100%;
+    width: 5.5em;
+    height: 3em;
+    background: #fff;
+    z-index: 2;
+    border-radius: 5px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.22);
+    border: solid 1px #979797;
+    padding: 0.2em 0.25em;
+}
+
+.costTitle {
+    display: flex;
+    flex: none;
+    margin-bottom: 0.1em;
+}
+
+.costTitle span {
+    font-family: SanFranciscoText;
+    font-size: 1rem;
+    line-height: 1.13;
+    color: #000000;
+}
+
+.costContent {
+    display: flex;
+    flex: none;
+    margin-bottom: 0.2em;
+}
+
+.costContent span {
+    font-family: SanFranciscoText;
+    font-size: 12px;
+    line-height: 1.33;
+    color: #000000;
+}
+
+.costBox {
+    display: flex;
+    flex: auto;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.costTable {
+    display: flex;
+    flex: none;
+    flex-direction: column;
+    width: 100%;
+    overflow: hidden;
+}
+
+.costRow {
+    display: flex;
+    flex: none;
+    padding: 10px 0;
+    margin-bottom: -1px;
+    border-bottom: 1px solid #979797
+}
+
+.costCell {
+    display: flex;
+    flex: 3 1;
+    width: 0;
+    align-items: center;
+}
+
+.costCell span {
+    font-family: SanFranciscoText;
+    font-size: 0.875rem;
+    line-height: 1.29;
+    color: #000000;
+}
+
+.costCellSmall {
+    flex: 1 1;
+}
+
+.costCellCenter {
+    justify-content: center
+}
+
+.costTd {
+    display: flex;
+    flex: auto;
+    align-items: center;
+    border-left: 1px solid #979797;
+}
+
+.costName {
+    display: flex;
+    flex: 3 1;
+    width: 0;
+}
+
+.costInput {
+    display: flex;
+    flex: 2 1;
+    align-items: center;
+    width: 0;
+    height: 0.3em;
+    margin: 0 0.1em;
+}
+
+.costInput input {
+    font-family: SanFranciscoText;
+    font-size: 0.875rem;
+    line-height: 1.29;
+    color: #000000;
+    width: 100%;
+    height: 100%;
+    padding: 0 5px;
+}
+
+.costUnits {
+    display: flex;
+    flex: 2 1;
+    width: 0;
+}
+
+.costColor {
+    display: flex;
+    flex: none;
+    width: 0.2em;
+    height: 0.2em;
+    margin: 0 0.05em;
+}
+
+.cost11 {
+    background-color: #9be44b;
+}
+
+.cost10 {
+    background-color: #ffcc78;
+}
+
+.cost01 {
+    background-color: #adaafc;
+}
+
+.cost00 {
+    background-color: #e8e8e8;
+}
+
+.costClose {
+    display: flex;
+    flex: none;
+    position: absolute;
+    right: 0.1em;
+    top: 0;
+    cursor: pointer;
+}
+
+.costClose span{
+    transform: rotate(45deg);
+    font-size: 2rem;
+    color: #9b9b9b;
+}
+
+.disabled {
+    cursor: not-allowed;
+    background-color: #d3d3d3;
+    color: #aaaaaa;
+    background-image: none;
 }
