--- a/src/components/Common/Background/styles.module.css
+++ b/src/components/Common/Background/styles.module.css
@@ -14,6 +14,10 @@
   top: 0;
   height: 100%;
   width: 100%;
+  transform: scaleY(0);
+  transform-origin: bottom;
+  transition: transform 1s ease;
+  opacity: .5;
 }
 
 .column {
@@ -22,6 +26,8 @@
   opacity: 0.1;
   margin-right: 0.05em;
   flex: 0 0 0.6em;
+  height: 0;
+  transition: height 1s ease;
 }
 
 .circle {
