--- a/src/components/Data/Quality/styles.module.css
+++ b/src/components/Data/Quality/styles.module.css
@@ -414,6 +414,9 @@
     display: flex;
     flex: none;
     flex-wrap: wrap;
+    overflow-y: scroll;
+    max-height: 70vh;
+    margin-top: 0.5rem;
 }
 
 .fixesCheck{
